# microswim

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.builder  Dockerfile.runtime  Makefile  Makefile.include  README.md  requirements.txt
benchmarks/: CMakeLists.txt
benchmarks/comparison/: comparison.ipynb
benchmarks/convergence/: CMakeLists.txt  README.md  configuration.h  main.c
benchmarks/failure_detection/: CMakeLists.txt  configuration.h  main.c
benchmarks/messages/: CMakeLists.txt  README.md  configuration.h  main_cbor.cc  main_json.cc
examples/: CMakeLists.txt
examples/darwin/: CMakeLists.txt  README.md  configuration.h  main.c
examples/esp32_RIOT/: Makefile  main.c  utils.c
examples/events/: CMakeLists.txt  main.c
examples/ipso/: CMakeLists.txt  configuration.h  main.c
examples/mcu/: README.md  main.c  utils.c
include/: constants.h  decode.h  encode.h  event.h  ipso.h  log.h  member.h  message.h  microswim.h  microswim_configuration.h  microswim_log.h  ping.h  ping_req.h  update.h  utils.h
scripts/: failure_detection.py  spawn.py
scripts/plots/: energy.py  gossip_rounds.py  message_count.py  messages.py  packets.py
src/: decode_cbor.c  decode_json.c  encode_cbor.c  encode_json.c  event.c  ipso.c  m_event.c  member.c  message.c  microswim.c  ping.c  ping_req.c  update.c  utils.c
tests/: CMakeLists.txt  configuration.h  test_encode_decode_cbor.c  test_helpers.c  test_helpers.h  test_indices.c  test_ipso.c  test_m_event.c  test_main.c  test_member.c  test_message.c  test_microswim.c  test_ping.c  test_ping_req.c  test_update.c  utils.c
